# llm-finetune

./: .gitignore  aus_wi_t20i_series_setup.py  filter_prompts.py  find_max_seq_len.py  find_module_names.py  h200_series_wrapper.py  model_verify_v2-1.py  model_verify_v2-2.py  model_verify_v2.py  model_verify_v3.py  modle_verify.py  mps_chec.py  parallel-sim-v1.py  parallel_sim_v1.py  parallel_sim_v2.py  phase2_sample_prompts.jsonl  prompt_generator.py  prompt_generator_v2.py  pyproject.toml  qwen_tokenizer_testing.py  qwenv1-1.py  qwenv1-2.ipynb  qwenv1.py  qwenv2-1.py  qwenv2.py  qwenv3-1.py  qwenv3-2.py  qwenv3.py  real_teams_setup.py  requirement-lock.txt  sample_prompts.jsonl  series_simulator.py  simulation_analysis.py  simulator_v1-1.py  simulator_v1.py  simulator_v2.py  stable_series_wrapper.py  test_label_masking.py  test_parallel-sim-mac.py  test_simulation.py  (+1 more)
