[project]
name = "llm-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "peft>=0.15.2",
    "prime-cli>=0.2.13",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "transformers-stream-generator>=0.0.5",
    "unsloth>=2024.8",
]
